--- a/index.dist.html
+++ b/index.dist.html
@@ -7,9 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,700">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/icomoon.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="/app.css">
     </head>
     <body class="menu-hidden">
         <div class="header">
@@ -44,6 +42,6 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src="http://cdn.jsdelivr.net/handlebarsjs/2.0.0/handlebars.min.js"></script>
         <script src="http://google.com/jsapi"></script>
-        <script src="js/app.js"></script>
+        <script src="/app.js"></script>
     </body>
 </html>
